--- a/src/App.css
+++ b/src/App.css
@@ -51,17 +51,15 @@ body, .app {
   position: fixed;
   right: 25px;
   bottom: 25px;
+  /*background-image: url('./icons/add.svg');*/
 }
 
-.open-search button {
+.open-search a {
   display: block;
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: #2e7d32;
-  background-image: url('./icons/add.svg');
-  background-repeat: no-repeat;
-  background-position: center;
+  background: #2e7d32 url('./icons/add.svg') no-repeat center;
   background-size: 28px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   font-size: 0;
