--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,11 @@ body, .app {
 
 .list-books-title {
   padding: 10px 0;
-  background: #2e7c31;
+  background: green;
   text-align: center;
+  font-size: large;
+  font-weight: bolder;
+  font-family: -apple-system, serif, 'Roboto', sans-serif;
 }
 
 .list-books-title h1 {
@@ -40,7 +43,8 @@ body, .app {
 }
 
 .bookshelf-title {
-  border-bottom: 1px solid #dedede;
+  border-bottom: 1px solid gray;
+  text-align: center;
 }
 
 .bookshelf-books {
@@ -49,9 +53,8 @@ body, .app {
 
 .open-search {
   position: fixed;
-  right: 25px;
+  right: 20px;
   bottom: 25px;
-  /*background-image: url('./icons/add.svg');*/
 }
 
 .open-search a {
@@ -59,15 +62,15 @@ body, .app {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: #2e7d32 url('./icons/add.svg') no-repeat center;
   background-size: 28px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   font-size: 0;
   outline: 0;
+  background: darkgreen url('./icons/add.svg') no-repeat center;
 }
 
-.open-search button:hover {
-  background-color: rgb(0, 102, 0);
+.open-search a:hover {
+  background-color: forestgreen;
 }
 
 
@@ -137,7 +140,7 @@ button:active {
 }
 
 .book {
-  width: 140px;
+  width: 120px;
 }
 
 .book-title,
@@ -167,10 +170,7 @@ button:active {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: #60ac5d;
-  background-image: url('./icons/arrow-drop-down.svg');
-  background-repeat: no-repeat;
-  background-position: center;
+  background: #60ac5d url('./icons/arrow-drop-down.svg') no-repeat center;
   background-size: 20px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
